Codes and config file modified, tests rewritten